views: use menu border inset to position submenus

Using the border inset directly, instead of trying to recompute it from the
MenuConfig, avoids positioning bugs when the submenu will have a border applied
to it.

Bug: 834934
Change-Id: Ic6c23f7dd5e34b643724c346bb89dac038dd58e4
Reviewed-on: https://chromium-review.googlesource.com/1231736
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592377}
Former-commit-id: 8b1391794f25f6e7363771a43c1988b3c5b8e5a5